Bug 407594 - Cannot export secret key
Summary: Cannot export secret key
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-16 11:28 UTC by Rainer Klute
Modified: 2019-05-16 11:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Klute 2019-05-16 11:28:23 UTC
SUMMARY
In Kleopatra 3.14, exporting the secret key fails with the following error message:

An error occurred while trying to export the secret key. 
The output from /usr/bin/gpgsm was: gpgsm: option "--export-secret-key" is ambiguous 

STEPS TO REPRODUCE
1. Select a key.
2. In the main menu, select "File → Export Secret Keys …".
3. In the file dialog, select a file to export the key to.

OBSERVED RESULT
The error message appears, and the target file is not written.

EXPECTED RESULT
No error message appears, and the target file is written.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20190514
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.2
Kernel Version: 5.0.13-1-default
OS Type: 64-bit
Processors: 8 × Intel® Xeon® CPU E3-1505M v5 @ 2.80GHz
Memory: 15,4 GiB

ADDITIONAL INFORMATION
–
Comment 1 Andre Heinecke 2019-05-16 11:36:16 UTC
Git commit 2e5b420cb6348043491d41efa793783235ac60f9 by Andre Heinecke.
Committed on 16/05/2019 at 11:35.
Pushed by aheinecke into branch 'Applications/19.04'.

Fix copy&paste error that breaks gpg process calls

This fixes commit 594c5f96d

GnuPG-Bug-Id: T4438
(cherry picked from commit bf9aab0b567dc0cf8a658c527930cd9544bf3ff4)

M  +1    -1    src/utils/gnupg-helper.cpp

https://commits.kde.org/kleopatra/2e5b420cb6348043491d41efa793783235ac60f9
Comment 2 Andre Heinecke 2019-05-16 11:38:36 UTC
Oh $@"§! my bad!

This was noticed and fixed already but I overlooked that the commit that introduced this problem was part of the release branch and the commit that fixed the problem was not.

Thank you very much for reporting it. It will be fixed in the next release. I've just commited the fix to the Application 19.04 branch.

For the record:
This was introduced with rev. 594c5f96d
Fixed in master with rev. bf9aab0b
Now fixed in Applications/19.04 with rev. 2e5b420
Comment 3 Rainer Klute 2019-05-16 11:55:21 UTC
Thanks a lot for the very quick fix!