Fix copy&paste error that breaks gpg process calls

This fixes commit 594c5f96d

GnuPG-Bug-Id: T4438
BUG: 407594
(cherry picked from commit bf9aab0b567dc0cf8a658c527930cd9544bf3ff4)